EP - UPDATES SWAGGER
